--- a/settings.json
+++ b/settings.json
@@ -9,14 +9,14 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"ownername": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"botname":"Alphabot",
+	"ownerNumber": "6282393072006",
+	"ownerNumberr": "6282393072006",
+	"cr": "Atsair Botz",
+	"ownername": "Atsair Gans",
+	"botname":"Atsair Botz",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"donasi":"donasi.jpg",
-	"fake": " 「  ALPHABOT  」\nCreated By ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×"
+	"fake": " 「  ATSAIRBOT  」\nCreated By ATSAUR BOT"
 }
